--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <h4>Supervisor</h4>
   <p>Monitors activity to identify project roadblocks</p>
-  <img src="images/icon-supervisor.svg">
+  <img src="images/icon-supervisor.svg" alt="logo magnifying glass ">
   
 
 </section>
@@ -54,7 +54,7 @@
   
   <h4>Team Builder</h4>
   <p>Scans our talent network to create the optimal team for your project</p>
-  <img src="images/icon-team-builder.svg">
+  <img src="images/icon-team-builder.svg" alt="logo project">
   
 </section>
 
@@ -62,7 +62,7 @@
   
   <h4>Karma</h4>
   <p>Regularly evaluates our talent to ensure quality</p>
-  <img src="images/icon-karma.svg">
+  <img src="images/icon-karma.svg" alt="logo light bulb">
  
 
 </section>
@@ -72,7 +72,7 @@
   
   <h4>Calculator</h4>
   <p>Uses data from past projects to provide better delivery estimates</p>
-  <img src="images/icon-calculator.svg">
+  <img src="images/icon-calculator.svg" alt="logo computer">
 
 
 
